test/bad/classes/print02.px

class Test def
    func toString() Int def
        return 0

print Test()
